#498 -  Fix code so that code to show analyzed/filtered counts for genes is only invoked when gene list changes.  Fix overflow so that scrollbars don’t show for analyze progress bar.  Fix null reference when standard filter clicked but no gene is selected.

--- a/assets/css/sass/_genes.sass
+++ b/assets/css/sass/_genes.sass
@@ -29,7 +29,7 @@
 
   #analyze-all-panel
     text-align:center
-    overflow: auto
+    overflow: hidden
     margin-top: 1px
     display: inline-block
     float: left  
@@ -85,6 +85,10 @@
         margin-left: 5px
         margin-top: -1px
 
+        &.hide
+          display: block !important
+          visibility: hidden
+
         .bar
           background-color: transparent
           line-height: 11px
@@ -104,7 +108,7 @@
         height: 18px
         margin-left: 5px
         margin-bottom: 2px   
-        margin-top: 5px   
+        margin-top: -5px   
 
         #called-bar
           background-color: rgba(65, 176, 220, 0.45)
